--- a/osbb.html
+++ b/osbb.html
@@ -134,7 +134,7 @@
     <footer>
         <address>
             <a href="mailto:assa.pvi@gmail.com">assa.pvi@gmail.com</a>
-            <a href="tel:+38.67285456.">+380679724818</a>
+            <a href="tel:+38067000000.">+38067000000</a>
         </address>
 
     </footer>
